azure_iaac/dev_vm_creation_2/template.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
     "admin_username": {
      "type": "SecureString"
    },
     "admin_passsword": {
      "type": "SecureString"
    },
    "extensions_enablevmaccess_username": {
      "type": "SecureString"
    },
    "extensions_enablevmaccess_password": {
      "type": "SecureString"
    },
    "extensions_enablevmaccess_ssh_key": {
      "type": "SecureString"
    },
    "extensions_enablevmaccess_reset_ssh": {
      "type": "SecureString"
    },
    "extensions_enablevmaccess_remove_user": {
      "type": "SecureString"
    },
    "extensions_enablevmaccess_expiration": {
      "type": "SecureString"
    },
    "sshPublicKeys_azure_vm_name": {
      "defaultValue": "azure_vm",
      "type": "String"
    },
    "virtualMachines_art_home_host_name": {
      "defaultValue": "art-home-host",
      "type": "String"
    },
    "networkSecurityGroups_default_NSG_name": {
      "defaultValue": "default-NSG",
      "type": "String"
    },
    "publicIPAddresses_art_home_host_ip_name": {
      "defaultValue": "art-home-host-ip",
      "type": "String"
    },
    "networkInterfaces_art_home_host148_z1_name": {
      "defaultValue": "art-home-host148_z1",
      "type": "String"
    },
    "networkSecurityGroups_art_home_host_nsg_name": {
      "defaultValue": "art-home-host-nsg",
      "type": "String"
    },
    "actionGroups_RecommendedAlertRules_AG_1_name": {
      "defaultValue": "RecommendedAlertRules-AG-1",
      "type": "String"
    },
    "metricAlerts_Percentage_CPU___art_home_host_name": {
      "defaultValue": "Percentage CPU - art-home-host",
      "type": "String"
    },
    "virtualNetworks_name_1": {
      "defaultValue": "my_resources_north_europe-vnet",
      "type": "String"
    },
    "virtualNetworks_name_2": {
      "defaultValue": "my_resources_north_europevnet612",
      "type": "String"
    },
    "metricAlerts_Available_Memory_Bytes___art_home_host_name": {
      "defaultValue": "Available Memory Bytes - art-home-host",
      "type": "String"
    },
    "metricAlerts_OS_Disk_IOPS_Consumed_Percentage___art_home_host_name": {
      "defaultValue": "OS Disk IOPS Consumed Percentage - art-home-host",
      "type": "String"
    },
    "metricAlerts_Data_Disk_IOPS_Consumed_Percentage___art_home_host_name": {
      "defaultValue": "Data Disk IOPS Consumed Percentage - art-home-host",
      "type": "String"
    }
  },
  "variables": {},
  "resources": [
    {
      "type": "Microsoft.Compute/sshPublicKeys",
      "apiVersion": "2023-03-01",
      "name": "[parameters('sshPublicKeys_azure_vm_name')]",
      "location": "northeurope",
      "properties": {
        "publicKey": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDPA1bZFx3hDmqimjWMfXTUWWPDyuMDkjjzLGNQYRPjtSWh49AEleclG08oPxYNFt5VjYACkzMvWCrXxOe79UVzVhGnr9AesAvW5+nofHNVKPfZdAi4y2jCor3uyc5cocvl97oojFN6Dxg5QlFPkkfOr/06EUNSZa0gySvdcmAZWqaLNzfM/TiLRlPiDuyhAEm512IJ5htQjgntfB5HuXb5AVQRD71GrI/RqhKaYWRwQfh4GGk5DI6MzHJNt3KZVEmkeTuxZEx/ag3B4YcGGAWV8z+Yg5m7wehY5nJat09InXllhu69TOSrCbPGXZ95Q9X9AwHLKr5REv2+MpDFVmyL5o0/ieaTbA/BILz6+7cfh7WenInPlKXvFmHwCSRtFocvtXzfRb1Gnlu4+0625WcXzji9wVS6qMzguyDl21HfIxK4W7b5TZFDCJ [...]
      }
    },
    {
      "type": "microsoft.insights/actionGroups",
      "apiVersion": "2023-01-01",
      "name": "[parameters('actionGroups_RecommendedAlertRules_AG_1_name')]",
      "location": "Global",
      "properties": {
        "groupShortName": "recalert1",
        "enabled": true,
        "emailReceivers": [
          {
            "name": "Email_-EmailAction-",
            "emailAddress": "fowlartshevchenka@gmail.com",
            "useCommonAlertSchema": true
          }
        ],
        "smsReceivers": [],
        "webhookReceivers": [],
        "eventHubReceivers": [],
        "itsmReceivers": [],
        "azureAppPushReceivers": [
          {
            "name": "Azure app_-AzureAppAction-",
            "emailAddress": "fowlartshevchenka@gmail.com"
          }
        ],
        "automationRunbookReceivers": [],
        "voiceReceivers": [],
        "logicAppReceivers": [],
        "azureFunctionReceivers": [],
        "armRoleReceivers": []
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2022-09-01",
      "name": "[parameters('publicIPAddresses_art_home_host_ip_name')]",
      "location": "northeurope",
      "sku": {
        "name": "Standard",
        "tier": "Regional"
      },
      "zones": [
        "1"
      ],
      "properties": {
        "ipAddress": "13.74.240.193",
        "publicIPAddressVersion": "IPv4",
        "publicIPAllocationMethod": "Static",
        "idleTimeoutInMinutes": 4,
        "ipTags": []
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2023-03-01",
      "name": "[parameters('virtualMachines_art_home_host_name')]",
      "location": "northeurope",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_art_home_host148_z1_name'))]"
      ],
      "zones": [
        "1"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_B1s"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "canonical",
            "offer": "0001-com-ubuntu-server-focal",
            "sku": "20_04-lts-gen2",
            "version": "latest"
          },
          "osDisk": {
            "osType": "Linux",
            "name": "[concat(parameters('virtualMachines_art_home_host_name'), '_OsDisk_1_6d26cc1f6c7e4d9a889e753f0f9eaac4')]",
            "createOption": "FromImage",
            "caching": "ReadWrite",
            "managedDisk": {
              "storageAccountType": "StandardSSD_LRS"
            },
            "deleteOption": "Detach",
            "diskSizeGB": 30
          },
          "dataDisks": []
        },
        "osProfile": {
          "computerName": "[parameters('virtualMachines_art_home_host_name')]",
          "adminUsername": "[parameters('admin_username')]",
          "adminPassword":"[parameters('admin_passsword')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": false,
            "provisionVMAgent": true,
            "patchSettings": {
              "patchMode": "ImageDefault",
              "assessmentMode": "ImageDefault"
            },
            "enableVMAgentPlatformUpdates": false
          },
          "secrets": [],
          "allowExtensionOperations": true
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_art_home_host148_z1_name'))]",
              "properties": {
                "deleteOption": "Detach"
              }
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true
          }
        }
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "apiVersion": "2023-03-01",
      "name": "[concat(parameters('virtualMachines_art_home_host_name'), '/AzureNetworkWatcherExtension')]",
      "location": "northeurope",
      "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_art_home_host_name'))]"
      ],
      "properties": {
        "autoUpgradeMinorVersion": true,
        "publisher": "Microsoft.Azure.NetworkWatcher",
        "type": "NetworkWatcherAgentLinux",
        "typeHandlerVersion": "1.4"
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "apiVersion": "2023-03-01",
      "name": "[concat(parameters('virtualMachines_art_home_host_name'), '/enablevmaccess')]",
      "location": "northeurope",
      "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_art_home_host_name'))]"
      ],
      "properties": {
        "autoUpgradeMinorVersion": true,
        "publisher": "Microsoft.OSTCExtensions",
        "type": "VMAccessForLinux",
        "typeHandlerVersion": "1.4",
        "settings": {},
        "protectedSettings": {
          "username": "[parameters('extensions_enablevmaccess_username')]",
          "password": "[parameters('extensions_enablevmaccess_password')]",
          "ssh_key": "[parameters('extensions_enablevmaccess_ssh_key')]",
          "reset_ssh": "[parameters('extensions_enablevmaccess_reset_ssh')]",
          "remove_user": "[parameters('extensions_enablevmaccess_remove_user')]",
          "expiration": "[parameters('extensions_enablevmaccess_expiration')]"
        }
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2022-09-01",
      "name": "[parameters('networkSecurityGroups_default_NSG_name')]",
      "location": "northeurope",
      "properties": {
        "securityRules": [
          {
            "name": "default-allow-22",
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_default_NSG_name'), 'default-allow-22')]",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2022-09-01",
      "name": "[concat(parameters('networkSecurityGroups_art_home_host_nsg_name'), '/AllowAnyCustom8080Inbound')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_art_home_host_nsg_name'))]"
      ],
      "properties": {
        "protocol": "TCP",
        "sourcePortRange": "*",
        "destinationPortRange": "8080",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 330,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2022-09-01",
      "name": "[concat(parameters('networkSecurityGroups_default_NSG_name'), '/default-allow-22')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_default_NSG_name'))]"
      ],
      "properties": {
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 1000,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2022-09-01",
      "name": "[concat(parameters('networkSecurityGroups_art_home_host_nsg_name'), '/HTTP')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_art_home_host_nsg_name'))]"
      ],
      "properties": {
        "protocol": "TCP",
        "sourcePortRange": "*",
        "destinationPortRange": "80",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 320,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2022-09-01",
      "name": "[concat(parameters('networkSecurityGroups_art_home_host_nsg_name'), '/SFTP')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_art_home_host_nsg_name'))]"
      ],
      "properties": {
        "protocol": "TCP",
        "sourcePortRange": "*",
        "destinationPortRange": "2222",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 340,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2022-09-01",
      "name": "[concat(parameters('networkSecurityGroups_art_home_host_nsg_name'), '/SSH')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_art_home_host_nsg_name'))]"
      ],
      "properties": {
        "protocol": "TCP",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 300,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2022-09-01",
      "name": "[parameters('virtualNetworks_name_1')]",
      "location": "germanywestcentral",
      "dependsOn": [
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.0.0.0/16"
          ]
        },
        "subnets": [
          {
            "name": "default",
            "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_name_1'), 'default')]",
            "properties": {
              "addressPrefix": "10.0.0.0/24",
              "delegations": [],
              "privateEndpointNetworkPolicies": "Enabled",
              "privateLinkServiceNetworkPolicies": "Enabled"
            },
            "type": "Microsoft.Network/virtualNetworks/subnets"
          }
        ],
        "virtualNetworkPeerings": [],
        "enableDdosProtection": false
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2022-09-01",
      "name": "[parameters('virtualNetworks_name_2')]",
      "location": "northeurope",
      "dependsOn": [
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.1.0.0/16"
          ]
        },
        "subnets": [
          {
            "name": "default",
            "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_name_2'), 'default')]",
            "properties": {
              "addressPrefix": "10.1.0.0/24",
              "delegations": [],
              "privateEndpointNetworkPolicies": "Enabled",
              "privateLinkServiceNetworkPolicies": "Enabled"
            },
            "type": "Microsoft.Network/virtualNetworks/subnets"
          }
        ],
        "virtualNetworkPeerings": [],
        "enableDdosProtection": false
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2022-09-01",
      "name": "[concat(parameters('virtualNetworks_name_1'), '/default')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_name_1'))]"
      ],
      "properties": {
        "addressPrefix": "10.0.0.0/24",
        "delegations": [],
        "privateEndpointNetworkPolicies": "Enabled",
        "privateLinkServiceNetworkPolicies": "Enabled"
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2022-09-01",
      "name": "[concat(parameters('virtualNetworks_name_2'), '/default')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_name_2'))]"
      ],
      "properties": {
        "addressPrefix": "10.1.0.0/24",
        "delegations": [],
        "privateEndpointNetworkPolicies": "Enabled",
        "privateLinkServiceNetworkPolicies": "Enabled"
      }
    },
    {
      "type": "microsoft.insights/metricAlerts",
      "apiVersion": "2018-03-01",
      "name": "[parameters('metricAlerts_Available_Memory_Bytes___art_home_host_name')]",
      "location": "Global",
      "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_art_home_host_name'))]",
        "[resourceId('microsoft.insights/actionGroups', parameters('actionGroups_RecommendedAlertRules_AG_1_name'))]"
      ],
      "properties": {
        "severity": 3,
        "enabled": true,
        "scopes": [
          "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_art_home_host_name'))]"
        ],
        "evaluationFrequency": "PT5M",
        "windowSize": "PT5M",
        "criteria": {
          "allOf": [
            {
              "threshold": 200000000,
              "name": "Metric1",
              "metricNamespace": "Microsoft.Compute/virtualMachines",
              "metricName": "Available Memory Bytes",
              "operator": "LessThan",
              "timeAggregation": "Average",
              "criterionType": "StaticThresholdCriterion"
            }
          ],
          "odata.type": "Microsoft.Azure.Monitor.MultipleResourceMultipleMetricCriteria"
        },
        "targetResourceType": "Microsoft.Compute/virtualMachines",
        "actions": [
          {
            "actionGroupId": "[resourceId('microsoft.insights/actionGroups', parameters('actionGroups_RecommendedAlertRules_AG_1_name'))]",
            "webHookProperties": {}
          }
        ]
      }
    },
    {
      "type": "microsoft.insights/metricAlerts",
      "apiVersion": "2018-03-01",
      "name": "[parameters('metricAlerts_Data_Disk_IOPS_Consumed_Percentage___art_home_host_name')]",
      "location": "Global",
      "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_art_home_host_name'))]",
        "[resourceId('microsoft.insights/actionGroups', parameters('actionGroups_RecommendedAlertRules_AG_1_name'))]"
      ],
      "properties": {
        "severity": 3,
        "enabled": true,
        "scopes": [
          "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_art_home_host_name'))]"
        ],
        "evaluationFrequency": "PT5M",
        "windowSize": "PT5M",
        "criteria": {
          "allOf": [
            {
              "threshold": 95,
              "name": "Metric1",
              "metricNamespace": "Microsoft.Compute/virtualMachines",
              "metricName": "Data Disk IOPS Consumed Percentage",
              "operator": "GreaterThan",
              "timeAggregation": "Average",
              "criterionType": "StaticThresholdCriterion"
            }
          ],
          "odata.type": "Microsoft.Azure.Monitor.MultipleResourceMultipleMetricCriteria"
        },
        "targetResourceType": "Microsoft.Compute/virtualMachines",
        "actions": [
          {
            "actionGroupId": "[resourceId('microsoft.insights/actionGroups', parameters('actionGroups_RecommendedAlertRules_AG_1_name'))]",
            "webHookProperties": {}
          }
        ]
      }
    },
    {
      "type": "microsoft.insights/metricAlerts",
      "apiVersion": "2018-03-01",
      "name": "[parameters('metricAlerts_OS_Disk_IOPS_Consumed_Percentage___art_home_host_name')]",
      "location": "Global",
      "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_art_home_host_name'))]",
        "[resourceId('microsoft.insights/actionGroups', parameters('actionGroups_RecommendedAlertRules_AG_1_name'))]"
      ],
      "properties": {
        "severity": 3,
        "enabled": true,
        "scopes": [
          "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_art_home_host_name'))]"
        ],
        "evaluationFrequency": "PT5M",
        "windowSize": "PT5M",
        "criteria": {
          "allOf": [
            {
              "threshold": 80,
              "name": "Metric1",
              "metricNamespace": "Microsoft.Compute/virtualMachines",
              "metricName": "OS Disk IOPS Consumed Percentage",
              "operator": "GreaterThan",
              "timeAggregation": "Average",
              "criterionType": "StaticThresholdCriterion"
            }
          ],
          "odata.type": "Microsoft.Azure.Monitor.MultipleResourceMultipleMetricCriteria"
        },
        "targetResourceType": "Microsoft.Compute/virtualMachines",
        "actions": [
          {
            "actionGroupId": "[resourceId('microsoft.insights/actionGroups', parameters('actionGroups_RecommendedAlertRules_AG_1_name'))]",
            "webHookProperties": {}
          }
        ]
      }
    },
    {
      "type": "microsoft.insights/metricAlerts",
      "apiVersion": "2018-03-01",
      "name": "[parameters('metricAlerts_Percentage_CPU___art_home_host_name')]",
      "location": "Global",
      "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_art_home_host_name'))]",
        "[resourceId('microsoft.insights/actionGroups', parameters('actionGroups_RecommendedAlertRules_AG_1_name'))]"
      ],
      "properties": {
        "severity": 3,
        "enabled": true,
        "scopes": [
          "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_art_home_host_name'))]"
        ],
        "evaluationFrequency": "PT5M",
        "windowSize": "PT5M",
        "criteria": {
          "allOf": [
            {
              "threshold": 80,
              "name": "Metric1",
              "metricNamespace": "Microsoft.Compute/virtualMachines",
              "metricName": "Percentage CPU",
              "operator": "GreaterThan",
              "timeAggregation": "Average",
              "criterionType": "StaticThresholdCriterion"
            }
          ],
          "odata.type": "Microsoft.Azure.Monitor.MultipleResourceMultipleMetricCriteria"
        },
        "targetResourceType": "Microsoft.Compute/virtualMachines",
        "actions": [
          {
            "actionGroupId": "[resourceId('microsoft.insights/actionGroups', parameters('actionGroups_RecommendedAlertRules_AG_1_name'))]",
            "webHookProperties": {}
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2022-09-01",
      "name": "[parameters('networkInterfaces_art_home_host148_z1_name')]",
      "location": "northeurope",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_art_home_host_ip_name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_name_2'), 'default')]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_art_home_host_nsg_name'))]"
      ],
      "kind": "Regular",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "id": "[concat(resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_art_home_host148_z1_name')), '/ipConfigurations/ipconfig1')]",
            "etag": "W/\"d54136d5-40e7-485b-96cf-eb2cb934784c\"",
            "type": "Microsoft.Network/networkInterfaces/ipConfigurations",
            "properties": {
              "provisioningState": "Succeeded",
              "privateIPAddress": "10.1.0.4",
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "name": "art-home-host-ip",
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_art_home_host_ip_name'))]",
                "properties": {
                  "provisioningState": "Succeeded",
                  "resourceGuid": "626a4954-de92-4cc9-bb3b-cf5f32fea1ce",
                  "publicIPAddressVersion": "IPv4",
                  "publicIPAllocationMethod": "Dynamic",
                  "idleTimeoutInMinutes": 4,
                  "ipTags": [],
                  "ipConfiguration": {
                    "id": "[concat(resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_art_home_host148_z1_name')), '/ipConfigurations/ipconfig1')]"
                  },
                  "deleteOption": "Detach"
                },
                "type": "Microsoft.Network/publicIPAddresses",
                "sku": {
                  "name": "Basic",
                  "tier": "Regional"
                }
              },
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_name_2'), 'default')]"
              },
              "primary": true,
              "privateIPAddressVersion": "IPv4"
            }
          }
        ],
        "dnsSettings": {
          "dnsServers": []
        },
        "enableAcceleratedNetworking": false,
        "enableIPForwarding": false,
        "disableTcpStateTracking": false,
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_art_home_host_nsg_name'))]"
        },
        "nicType": "Standard"
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2022-09-01",
      "name": "[parameters('networkSecurityGroups_art_home_host_nsg_name')]",
      "location": "northeurope",
      "dependsOn": [
      ],
      "properties": {
        "securityRules": [
          {
            "name": "SSH",
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_art_home_host_nsg_name'), 'SSH')]",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 300,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "HTTP",
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_art_home_host_nsg_name'), 'HTTP')]",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 320,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowAnyCustom8080Inbound",
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_art_home_host_nsg_name'), 'AllowAnyCustom8080Inbound')]",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "8080",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 330,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "SFTP",
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_art_home_host_nsg_name'), 'SFTP')]",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "2222",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 340,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      }
    }
  ]
}
